hatalar giderildi
